fix right margin on tablet

--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -217,10 +217,9 @@
           box-shadow: 0px 4px 8px 0 rgba(129, 126, 126, 0.2),
             0 6px 20px 0 rgba(122, 120, 120, 0.19);
           border-radius: 20px;
-
           flex: 1 1 30%;
           padding: 25px 20px 25px 30px;
-          margin: 10px 20px 10px 0;
+          margin: 10px 0px 10px 0;
           &:last-child {
             margin-right: 0;
           }
